see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Aug-2012 Rouven Weßling
 ^ Merge latest platform (bf746b2389fbea9c0fa48ea015320c18beb8d0f3)
 ^ Remove use of the deprecated JProfiler::getMemory().

20-Aug-2012 Rouven Weßling
 + Add setup for unit testing. Thanks Michael.

20-Aug-2012 Jean-Marie Simonet
 # [#28943] *Allowing to disable admin menu bar collapse (Isis)
 # [#28947] Handle submenu rendering as a module again. Thanks Rouven
 # [#28942] Use bootstrap markup in Fx.Progressbar; Use Fx.Progressbar in Finder. Thansk Rouven.
 # [#28955] Commit of issue 28932 broke sample data installation, Thanks Mark.

18-Aug-2012 Jean-Marie Simonet
 # [#28929] *Frontend editing tabs does not work. Thanks Peter.
 # [#28932] *Simplifying sample data install on 3.0 alpha2

-------------------- 3.0 Alpha 2 Release [16-Aug-2012] ------------------

16-Aug-2012 Mark Dexter
 # [#28927] Update sample data files for protostar and isis. Thanks Elin.

16-Aug-2012 Jean-Marie Simonet
 # [#28925] Change the variable name on the submenu rendering to avoid conflicts. Thanks Andrea.
 # [#28926] Add Isis and Protostar to mysql/joomla.sql. Thanks Elin.
 # Fix installation languages issue. Thanks Roberto

16-Aug-2012 Rouven Weßling
 ^ Reduce use of JFolder and deprecated JRequest methods.
 ^ Merge latest platform (c77f323d339b7dcfb305325c48a38813322dd69d)

15-Aug-2012 Jean-Marie Simonet
 + Porting to master Installing Language packs from Extension Manager. Thanks Javier and Rouven
 #^ [#28918] Abstract FinderIndexer class for improved database support. Thanks Michael

15-Aug-2012 Rouven Weßling
 #+ [#28032] Split mod_login into two layouts
