@@ -3,4 +3,15 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
+TPL_ISIS_POSITION_CPANEL="Cpanel"
+TPL_ISIS_POSITION_CP_SHELL="Unused"
+TPL_ISIS_POSITION_DEBUG="Debug"
+TPL_ISIS_POSITION_FOOTER="Footer"
+TPL_ISIS_POSITION_ICON="Quick Icons"
+TPL_ISIS_POSITION_LOGIN="Login"
+TPL_ISIS_POSITION_MENU="Menu"
+TPL_ISIS_POSITION_STATUS="Status"
+TPL_ISIS_POSITION_SUBMENU="Submenu"
+TPL_ISIS_POSITION_TITLE="Title"
+TPL_ISIS_POSITION_TOOLBAR="Toolbar"
 TPL_ISIS_XML_DESCRIPTION="Continuing the Egyptian god/goddess theme (Khepri from 1.5 and Hathor from 1.6), Isis is the Joomla 3.0 admin template based on Bootstrap from Twitter and the launch of the Joomla User Interface library (JUI)."
